# win-nfd-rs

./: Cargo.toml  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: CI.yml  rustdoc.yml
implementors/alloc/borrow/: trait.ToOwned.js
implementors/core/borrow/: trait.Borrow.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
src/: c_wide_string.rs  fileapi.rs  lib.rs  shobjidl.rs
src/win_nfd/: c_wide_string.rs.html  fileapi.rs.html  lib.rs.html  shobjidl.rs.html
win_nfd/: all.html  enum.NfdError.html  fn.nfd_open.html  fn.nfd_open_builder.html  fn.nfd_save.html  fn.nfd_save_builder.html  index.html  sidebar-items.js  struct.CoTaskMemWideString.html  struct.FileOpenDialogBuilder.html  struct.FileSaveDialogBuilder.html  struct.HResult.html
win_nfd/c_wide_string/: enum.FromWideWithNulErrorKind.html  index.html  sidebar-items.js  struct.CWideStr.html  struct.CWideString.html  struct.FromVecWithNulError.html  struct.NulError.html  trait.IntoWide.html
win_nfd/fileapi/: fn.get_full_path_name.html  index.html  sidebar-items.js
win_nfd/shobjidl/: enum.DisplayNameType.html  index.html  sidebar-items.js  struct.FileDialog.html  struct.FileFilters.html  struct.FileOpenDialog.html  struct.FileSaveDialog.html  struct.ItemIdList.html  struct.ModalWindow.html  struct.ShellItem.html
(+18 files in other folders)
